--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>Block Blast - High Score Fix</title>
+    <title>Block Blast</title>
     <style>
         :root { --bg: #0f0f0f; --grid: #1a1a1a; --accent: #00adb5; --cell-size: 40px; }
         * { box-sizing: border-box; }
